2011-12-14  Albert Chu <chu11@llnl.gov>

	* contrib/pet/README: Fix some text and formatting.

2011-12-14  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/: Support 'perf' token option.

2011-12-13  Albert Chu <chu11@llnl.gov>

	Build system rework.

	* contrib/, libfreeipmi/: Remove most subdir Makefiles.

	* Various Makefile.am cleanup.

	* freeipmi.spec.in: Move libipmimonitoring contrib into devel package.

2011-12-13  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/check_rmcpping, contrib/pet/ipminodes.cfg: New files.

	* contrib/pet/: Significant doc updates.

2011-12-13  Albert Chu <chu11@llnl.gov>

	* Minor documentation updates.

	* Minor packaging fixes to fix distcheck.
	
2011-12-12  Albert Chu <chu11@llnl.gov>

	Giant re-org of code.

	* Store all manpages stored in man/.

	* Store all /etc appropriate files in etc/.

	* Move common/src libs to common/.

	* Remove many src directories, move sources up a directory.

	* Various Makefile cleanups.
	
2011-12-12  Albert Chu <chu11@llnl.gov>

	* examples/: Remove directory.  Move files into contrib/libipmimonitoring.

	* Install contribs into doc/contrib/

	* freeipmi.spec.in: Fixup for recent changes.

2011-12-12  Kaiwang Chen <kaiwang.chen@gmail.com>

	* libfreeipmi/src/api/ipmi-api-util.c (_api_ipmi_cmd_post): Fix
	corner case bug.

	* contrib/pet/petalert.pl: Support workaround option.

2011-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Fix completion code check corner case with
	IPMI_FLAGS_NO_LEGAL_CHECK.

	* libfreeipmi/: Minor code cleanup.

2011-12-09  Kaiwang Chen <kaiwang.chen@gmail.com>

	* libfreeipmi/src/api/: Fix bug with IPMI_FLAGS_NO_LEGAL_CHECK
	use.
	
2011-12-08  Albert Chu <chu11@llnl.gov>

	* Support IPMI_FLAGS_NO_LEGAL_CHECK flag in libfreeipmi.

2011-12-07  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl: Support PET acknowledge option.

2011-12-07  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/: Support "malformedack" workaround option.
	