@@ -2021,21 +2021,9 @@ ipmi_get_oem_specific_message (uint32_t manufacturer_id,
   return (-1);
 }
 
-int
-ipmi_get_oem_event_bitmask_message (uint32_t manufacturer_id,
-                                    uint16_t product_id,
-                                    uint8_t event_reading_type_code,
-                                    uint8_t sensor_type,
-                                    uint16_t event_bitmask,
-                                    char *buf,
-                                    unsigned int buflen)
+static int
+_supermicro_oem_temp_level_sensor_supported (uint32_t manufacturer_id, uint16_t product_id)
 {
-  if (!buf || !buflen)
-    {
-      SET_ERRNO (EINVAL);
-      return (-1);
-    }
-
   /* OEM Interpretation
    *
    * Supermicro X7DBR-3 (X7DBR_3)
@@ -2089,6 +2077,31 @@ ipmi_get_oem_event_bitmask_message (uint32_t manufacturer_id,
 	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCA_F_O))
       || (manufacturer_id == IPMI_IANA_ENTERPRISE_ID_MAGNUM_TECHNOLOGIES
 	  && product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTL))
+    return (1);
+
+  return (0);
+}
+
+int
+ipmi_get_oem_event_bitmask_message (uint32_t manufacturer_id,
+                                    uint16_t product_id,
+                                    uint8_t event_reading_type_code,
+                                    uint8_t sensor_type,
+                                    uint16_t event_bitmask,
+                                    char *buf,
+                                    unsigned int buflen)
+{
+  if (!buf || !buflen)
+    {
+      SET_ERRNO (EINVAL);
+      return (-1);
+    }
+
+  /* OEM Interpretation
+   *
+   * See notes in _supermicro_oem_temp_level_sensor_supported()
+   */
+  if (_supermicro_oem_temp_level_sensor_supported (manufacturer_id, product_id))
     {
       switch (event_reading_type_code)
 	{
@@ -2348,51 +2361,11 @@ ipmi_get_event_messages (uint8_t event_reading_type_code,
     }
   /* OEM Interpretation
    *
-   * Supermicro X7DBR-3 (X7DBR_3)
-   * Supermicro X7DB8
-   * Supermicro X8DTN
-   * Supermicro X7SBI-LN4 (X7SBI_LN4)
-   * Supermicro X8DTH
-   * Supermicro X8DTG
-   * Supermicro X8DTU
-   * Supermicro X8DT3-LN4F (X8DT3_LN4F)
-   * Supermicro X8DTU-6+ (X8DTU_6PLUS)
-   * Supermicro X8DTL
-   * Supermicro X8DTL-3F (X8DTL_3F)
-   * Supermicro X8SIL-F  (X8SIL_F)
-   * Supermicro X9SCL
-   * Supermicro X9SCM
-   * Supermicro X8DTN+-F (X8DTNPLUS_F)
-   * Supermicro X8SIE
-   * Supermicro X9SCA-F-O (X9SCA_F_O)
-   *
-   * Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
-   * Note: Some Supermicro motherboards are rebranded with random manufacturer IDs
+   * See notes in _supermicro_oem_temp_level_sensor_supported()
    */
   else if (event_reading_type_code_class == IPMI_EVENT_READING_TYPE_CODE_CLASS_OEM
            && flags & IPMI_GET_EVENT_MESSAGES_FLAGS_INTERPRET_OEM_DATA
-	   && ((manufacturer_id == IPMI_IANA_ENTERPRISE_ID_PEPPERCON
-		&& (product_id == IPMI_SUPERMICRO_PRODUCT_ID_X7DBR_3
-		    || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X7DB8
-		    || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTN
-		    || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X7SBI_LN4))
-	       || ((manufacturer_id == IPMI_IANA_ENTERPRISE_ID_SUPERMICRO
-		    || manufacturer_id ==  IPMI_IANA_ENTERPRISE_ID_SUPERMICRO_WORKAROUND)
-		   && (product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTH
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTG
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTU
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DT3_LN4F
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTU_6PLUS
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTL
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_3F
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8SIL_F
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCL
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCM
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8SIE
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCA_F_O))
-	       || (manufacturer_id == IPMI_IANA_ENTERPRISE_ID_MAGNUM_TECHNOLOGIES
-		   && product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTL))
+	   && _supermicro_oem_temp_level_sensor_supported (manufacturer_id, product_id)
            && event_reading_type_code == IPMI_EVENT_READING_TYPE_CODE_OEM_SUPERMICRO_GENERIC)
     {
       len = ipmi_get_oem_event_bitmask_message (manufacturer_id,
